fix: fix hyphenation and word breaking problems on mobile with |safe brake-words and hyphens auto in tiedot.html and tool_card.html

--- a/tyokalut/static/tyokalut/css/output.css
+++ b/tyokalut/static/tyokalut/css/output.css
@@ -991,6 +991,15 @@ video {
   overflow: hidden;
 }
 
+.hyphens-auto {
+  -webkit-hyphens: auto;
+          hyphens: auto;
+}
+
+.break-words {
+  overflow-wrap: break-word;
+}
+
 .rounded {
   border-radius: 0.25rem;
 }
@@ -1719,6 +1728,10 @@ video {
 
   .md\:items-center {
     align-items: center;
+  }
+
+  .md\:justify-between {
+    justify-content: space-between;
   }
 
   .md\:gap-16 {
